Removed overflow hidden and added background attachment fixed

--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ body {
     background-position: center bottom;
      background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
+
+     background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+   
 }
 
 .star {
@@ -211,7 +215,7 @@ body {
 
     h2 {
         margin:0;
-        line-height: 1.5;
+        line-height: 1.25;
         font-size: 24px;
         text-shadow: 1px 1px #bfbbbb; 
     }
@@ -268,7 +272,7 @@ footer {
   text-align: center;
   margin: 0 auto;
   font-style: inherit;
-  font-size: 14px;
+  font-size: 12px;
   background: #f7f4f4;
   max-width: fit-content;
   border-radius: 5px;
